# repo-rag-agent

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/routes/: ask.py  debug.py  health.py
app/schemas/: api.py
app/services/: agent_service.py  retrieval_service.py
app/static/: app.js  style.css
app/templates/: index.html
data/artifacts/: documents.json  embedding_matrix.npy  lexical_index.pkl
data/processed/: all_chunks.json
scripts/: generate_eval_data.py  run_eval.py  run_judge_eval.py  smoke_test.py
src/: artifacts.py  config.py  exceptions.py
src/agent/: builder.py  prompts.py  tools.py
src/evaluation/: data_generation.py  ir_metrics.py  judge.py  logging_utils.py  metrics.py  schemas.py
src/retrieval/: base.py  formatting.py  hybrid.py  lexical.py  query.py  vector.py
tests/: conftest.py  test_api_ask.py  test_api_health.py  test_evaluation_judge.py  test_evaluation_metrics.py  test_frontend_page.py  test_logging_utils.py  test_query_formulation.py  test_retrieval_bm25.py  test_retrieval_hybrid.py  test_retrieval_vector.py  test_run_eval.py  test_run_judge_eval.py
