[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "pydantic-ai>=1.73.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
